2002-07-04  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/utime.h: Add include of <_ansi.h>.
	* libc/sys/linux/Makefile.am: Add utimes.c.
	* libc/sys/linux/Makefile.in: Regenerated.
	* libc/sys/linux/inode.c(__umask): New static routine.
	(umask): Written to use __umask and attempt to thread lock.
	(getumask): New function written to use __umask and thread lock.
	* libc/sys/linux/utimes.c: New file.
	* libc/sys/linux/sys/time.h: Fix utimes prototype.
	* libc/sys/linux/sys/utime.h: New file.

2002-07-04  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* libtool.m4: New file.
	* libc/sys/linux/process.c: Implement vfork in terms of fork,
	rather than as a syscall.

2002-07-04  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/stdio.h: Add new prototypes.
	* libc/stdio/Makefile.am: Add fseeko.c and ftello.c.
	* libc/stdio/Makefile.in: Regenerated.
	* libc/stdio/fseek.c: Add fseeko documentation.
	* libc/stdio/ftell.c: Add ftello documentation.
	* libc/stdio/fseeko.c: New file.
	* libc/stdio/ftello.c: New file.

2002-07-04  Jeff Johnston  <jjohnstn@redhat.com>

        * libc/stdio/Makefile.am: Add asprintf.c and vasprintf.c.
        * libc/stdio/Makefile.in: Regenerated.
        * libc/stdio/asprintf.c: New file.
        * libc/stdio/vasprintf.c: Ditto.
        * libc/stdio/fvwrite.c: Add code to dynamically reallocate
        the buffer for asprintf support.
        * libc/stdio/sprintf.c: Add asprintf documentation.
        * libc/stdio/vfprintf.c: Add vasprintf documentation.
        * libc/include/stdio.h: Add new prototypes.

2002-07-02  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* libc/search/hcreate.c: Remove advertising clause from license.
	* libc/search/hcreate_r.c: Likewise.

2002-07-02  Chris Demetriou  <cgd@broadcom.com>

        * libc/include/sys/config.h (__IEEE_LITTLE_ENDIAN)
        (__IEEE_BIG_ENDIAN): Define appropriately for MIPS.
        Check that one of them is defined and error out if not.